--- a/Specificator/pom.xml
+++ b/Specificator/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.9.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.2.6.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
