--- a/emailer/pom.xml
+++ b/emailer/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet</artifactId>
+            <version>1.1.10.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
