--- a/emailer/src/main/webapp/WEB-INF/web.xml
+++ b/emailer/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,11 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         version="3.0">
+
+    <display-name>Tomcat CDI example</display-name>
+
+    <listener>
+        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+    </listener>
+
 </web-app>
