--- a/Specificator/pom.xml
+++ b/Specificator/pom.xml
@@ -60,6 +60,11 @@
             <!--<artifactId>hibernate-entitymanager</artifactId>-->
             <!--<version>4.2.6.Final</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet</artifactId>
+            <version>1.1.10.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
