--- a/Itschool/pom.xml
+++ b/Itschool/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>weld-servlet</artifactId>
             <version>1.1.10.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
