--- a/Itschool/src/main/webapp/WEB-INF/web.xml
+++ b/Itschool/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         version="3.0">
 
-    <display-name>Tomcat CDI example</display-name>
+    <display-name>itschool</display-name>
 
     <listener>
         <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
